@@ -31,6 +31,7 @@ import io.vertx.core.file.AsyncFile;
 import io.vertx.core.file.FileSystem;
 import io.vertx.core.file.OpenOptions;
 import io.vertx.ext.web.handler.HttpException;
+import org.jetbrains.annotations.VisibleForTesting;
 
 import static org.apache.cassandra.sidecar.common.http.SidecarHttpResponseStatus.CHECKSUM_MISMATCH;
 
@@ -56,26 +57,27 @@ public class MD5ChecksumVerifier implements ChecksumVerifier
             return Future.succeededFuture(filePath);
         }
 
-        LOGGER.debug("Validating MD5. Expected to match: {}", expectedChecksum);
+        LOGGER.debug("Validating MD5. expected_checksum={}", expectedChecksum);
 
         return fs.open(filePath, new OpenOptions())
                  .compose(this::calculateMD5)
                  .compose(computedChecksum -> {
                      if (!expectedChecksum.equals(computedChecksum))
+                     {
+                         LOGGER.error("Checksum mismatch. computed_checksum={}, expected_checksum={}, algorithm=MD5",
+                                      computedChecksum, expectedChecksum);
                          return Future.failedFuture(new HttpException(CHECKSUM_MISMATCH.code(),
                                                                       String.format("Checksum mismatch. "
-                                                                                    + "computed_checksum=%s, "
                                                                                     + "expected_checksum=%s, "
                                                                                     + "algorithm=MD5",
-                                                                                    computedChecksum,
                                                                                     expectedChecksum)));
-                     LOGGER.debug("Checksum mismatch. computed_checksum={}, expected_checksum={}, algorithm=MD5",
-                                  computedChecksum, expectedChecksum);
+                     }
                      return Future.succeededFuture(filePath);
                  });
     }
 
-    private Future<String> calculateMD5(AsyncFile file)
+    @VisibleForTesting
+    Future<String> calculateMD5(AsyncFile file)
     {
         MessageDigest digest;
         try
@@ -91,12 +93,15 @@ public class MD5ChecksumVerifier implements ChecksumVerifier
         file.pause()
             .setReadBufferSize(DEFAULT_READ_BUFFER_SIZE)
             .handler(buf -> digest.update(buf.getBytes()))
-            .endHandler(_v -> result.complete(Base64.getEncoder().encodeToString(digest.digest())))
-            .exceptionHandler(cause ->
-                              {
-                                  LOGGER.error("Error while calculating MD5 checksum", cause);
-                                  result.fail(cause);
-                              })
+            .endHandler(_v -> {
+                result.complete(Base64.getEncoder().encodeToString(digest.digest()));
+                file.end();
+            })
+            .exceptionHandler(cause -> {
+                LOGGER.error("Error while calculating MD5 checksum", cause);
+                result.fail(cause);
+                file.end();
+            })
             .resume();
         return result.future();
     }
